tests/dfrouter/errors/detector_files/no_detector_files/errors.dfrouter
Error: No detector file given (use --detector-files <FILE>).
Quitting (on error).
